[package]
name = "rebase-wizard"
version = "0.99.2"
authors = ["Alex Burkhart <saterus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2" # intention here is to reuse skim's dependency
regex = "1.3.6"
skim = "0.8.1"
structopt = "0.3.12"
